[gd_scene load_steps=10 format=3 uid="uid://joqobmhkgi05"]

[ext_resource type="Script" path="res://Scripts/enem.gd" id="1_lu6ol"]
[ext_resource type="PackedScene" uid="uid://fxwkrknr0vht" path="res://assects/Rat (1).glb" id="2_cdsgx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_47tga"]
bottom_radius = 1.0

[sub_resource type="Animation" id="Animation_yp7x8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_p3a8k"]
resource_name = "ROLLB"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 2), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-6.28319, 0, 0)]
}

[sub_resource type="Animation" id="Animation_n4pfc"]
resource_name = "ROLLF"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, -2), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 0, 0)]
}

[sub_resource type="Animation" id="Animation_goj7h"]
resource_name = "ROLLL"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-2, 1, 0), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -6.28319)]
}

[sub_resource type="Animation" id="Animation_8w7fo"]
resource_name = "ROLLR"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2, 1, 0), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6obfm"]
_data = {
"RESET": SubResource("Animation_yp7x8"),
"ROLLB": SubResource("Animation_p3a8k"),
"ROLLF": SubResource("Animation_n4pfc"),
"ROLLL": SubResource("Animation_goj7h"),
"ROLLR": SubResource("Animation_8w7fo")
}

[node name="Enem" type="Node3D"]
script = ExtResource("1_lu6ol")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CylinderMesh_47tga")

[node name="Ray_X1" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(2, 0, 0)
hit_from_inside = true
hit_back_faces = false

[node name="Ray_X2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(-2, 0, 0)
hit_from_inside = true
hit_back_faces = false

[node name="Ray_Z1" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, 2)
hit_from_inside = true
hit_back_faces = false

[node name="Ray_Z2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -2)
hit_from_inside = true
hit_back_faces = false

[node name="Ray_X3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 0)
target_position = Vector3(0, -1.5, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Ray_X4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, 0)
target_position = Vector3(0, -1.5, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Ray_Z3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 2)
target_position = Vector3(0, -1.5, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Ray_Z4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -2)
target_position = Vector3(0, -1.5, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6obfm")
}

[node name="Rat (1)" parent="." instance=ExtResource("2_cdsgx")]
transform = Transform3D(0.500753, 0, 0, 0, 0.500753, 0, 0, 0, 0.500753, 0, 0.4, 0)
